resources/sass/todo.scss
@import 'app';

header.app
{
    @extend %app-header;

    #title
    {
        @include title-font;
    }
}

div.app-container
{
    flex-direction: column;
    overflow-y: scroll;
    padding-bottom: 2.5px;

    div.to-do-item
    {
        align-items: center;
        border: $thin-border solid $light-grey;
        border-radius: 10px;
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        margin-left: 15%;
        margin-top: 5px;
        text-align: center;
        width: 70%;

        @media only screen and (max-width: 1300px)
        {
            margin-left: 5%;
            width: 90%;
        }

        @media only screen and (max-width: 800px)
        {
            margin-left: 2.5%;
            width: 95%;
        }

        &:first-of-type
        {
            margin-top: .5%;
        }

        form
        {
            flex-grow: 0;

            input[type="checkbox"]
            {
                @extend %checkbox;

                height: 50px;
                width: 50px;

                &:checked
                {
                    background: $black;
                }
            }
        }

        a
        {
            color: $white;
            flex-grow: 1;
            font-family: $body-font;
            font-size: 2em;
            max-width: 85%;
            overflow-x: hidden;
            text-decoration: none;
            vertical-align: middle;

            @media only screen and (max-width: 1300px)
            {
                font-size: 1.75em;
                max-width: 75%;
            }

            @media only screen and (max-width: 800px)
            {
                font-size: 1.5em;
            }

            @media only screen and (max-width: 450px)
            {
                font-size: 1.25em;
            }

            &.completed
            {
                color: $light-grey;
                text-decoration: line-through;
            }

            &:hover
            {
                font-weight: bold;
            }
        }

        div.priority
        {
            border-left: $thin-border solid $light-grey;
            border-radius: 0 7.5px 7.5px 0;
            flex-basis: 25px;
            flex-grow: 0;
            height: 100%;

            @media only screen and (max-width: 800px)
            {
                flex-basis: 15px;
            }

            &.default
            {
                background-color: $brown;
            }

            &.low
            {
                background-color: $green;
            }

            &.medium
            {
                background-color: $yellow;
            }

            &.high
            {
                background-color: $red;
            }
        }

        &.empty
        {
            border: $thin-border dashed $light-grey;

            form
            {
                flex-grow: 0;

                input[type="checkbox"]
                {
                    @extend %checkbox;

                    border: $thin-border dashed $white;
                }
            }

            div.priority
            {
                border-left: $thin-border dashed $light-grey;
            }
        }
    }

    form.to-do
    {
        @extend %card;

        min-height: 85%;
        margin-bottom: auto;
        margin-left: 12.5%;
        margin-right: auto;
        margin-top: auto;
        text-align: center;
        width: 75%;

        @media only screen and (max-width: 1100px)
        {
            margin-left: 2.5%;
            width: 95%;
        }

        h2
        {
            border-bottom: $thin-border solid $light-grey;
            color: $white;
            font-family: $header-font;
            font-size: 2em;
            margin-left: 12.5%;
            width: 75%;

            @media only screen and (max-height: 850px)
            {
                font-size: 1.75em;
            }

            @media only screen and (max-width: 900px)
            {
                font-size: 1.5em;
                margin-left: 2.5%;
                width: 95%;
            }

            @media only screen and (max-width: 350px)
            {
                font-size: 1.25em;
            }
        }

        input, textarea
        {
            border-radius: 5px;
            width: 75%;

            @media only screen and (max-width: 850px)
            {
                width: 95%;
            }
        }

        input[type="text"]
        {
            font-family: $body-font;
            font-size: 1.75em;
            text-align: center;

            @media only screen and (max-height: 850px)
            {
                font-size: 1.5em;
            }
        }

        textarea
        {
            font-family: $body-font;
            font-size: 1.5em;
            height: 35%;

            @media only screen and (max-height: 850px)
            {
                font-size: 1.25em;
            }

            @media only screen and (max-height: 750px)
            {
                height: 30%;
            }

            @media only screen and (max-height: 675px)
            {
                height: 25%;
            }
        }

        div.priority-container
        {
            @extend %flex-container;

            margin-left: 12.5%;
            width: 75%;

            @media only screen and (max-width: 900px)
            {
                margin-left: 2.5%;
                width: 95%;
            }

            .priority-checkbox
            {
                @extend %checkbox;

                height: 75px;
                width: 75px;

                @media only screen and (max-width: 900px)
                {
                    height: 65px;
                    width: 65px;
                }

                @media only screen and (max-height: 850px)
                {
                    height: 50px;
                    width: 50px;
                }

                &.default
                {
                    border-color: $brown;

                    &:checked
                    {
                        background: $brown;
                    }
                }

                &.low
                {
                    border-color: $green;

                    &:checked
                    {
                        background: $green;
                    }
                }

                &.medium
                {
                    border-color: $yellow;

                    &:checked
                    {
                        background: $yellow;
                    }
                }

                &.high
                {
                    border-color: $red;

                    &:checked
                    {
                        background: $red;
                    }
                }
            }
        }

        button
        {
            @extend %button;

            font-size: 1.85em;
            height: 12.5%;
            width: 25%;

            @media only screen and (max-width: 1200px)
            {
                width: 35%;
            }

            @media only screen and (max-height: 750px)
            {
                height: 10%;
                font-size: 1.5em;
            }

            @media only screen and (max-width: 450px)
            {
                width: 45%;
            }

            @media only screen and (max-width: 350px)
            {
                font-size: 1.25em;
            }

            &:hover
            {
                @extend %button-hover;
            }

            &:first-of-type
            {
                margin-right: 5%;

                @media only screen and (max-width: 450px)
                {
                    margin-right: 1%;
                }
            }

            &:last-of-type
            {
                margin-left: 5%;

                @media only screen and (max-width: 450px)
                {
                    margin-left: 1%;
                }
            }
        }
    }

    div.completed
    {
        @extend %card;

        height: auto;
        margin-bottom: auto;
        margin-left: 12.5%;
        margin-right: auto;
        margin-top: auto;
        text-align: center;
        width: 75%;

        @media only screen and (max-width: 1100px)
        {
            margin-left: 2.5%;
            width: 95%;
        }

        h2
        {
            border-bottom: $thin-border solid $light-grey;
            color: $white;
            font-family: $header-font;
            font-size: 2em;
            margin-left: 12.5%;
            width: 75%;

            @media only screen and (max-height: 850px)
            {
                font-size: 1.75em;
            }

            @media only screen and (max-width: 900px)
            {
                font-size: 1.5em;
                margin-left: 2.5%;
                width: 95%;
            }

            @media only screen and (max-width: 350px)
            {
                font-size: 1.25em;
            }
        }

        h3.title
        {
            color: $white;
            font-family: $body-font;
            font-size: 2em;
            font-weight: normal;
            margin-left: 12.5%;
            width: 75%;
            word-wrap: break-word;

            @media only screen and (max-height: 850px)
            {
                font-size: 1.75em;
            }

            @media only screen and (max-width: 900px)
            {
                font-size: 1.5em;
                margin-left: 2.5%;
                width: 95%;
            }

            @media only screen and (max-width: 350px)
            {
                font-size: 1.25em;
            }
        }

        p
        {
            border: $thin-border solid $light-grey;
            border-radius: 5px;
            color: $white;
            font-family: $body-font;
            font-size: 1.75em;
            margin-left: 12.5%;
            padding: 5%;
            padding-bottom: 2%;
            padding-top: 2%;
            text-align: left;
            width: 65%;

            @media only screen and (max-height: 850px)
            {
                font-size: 1.75em;
            }

            @media only screen and (max-width: 900px)
            {
                font-size: 1.5em;
                margin-left: 2.5%;
                width: 83.5%;
            }

            @media only screen and (max-width: 350px)
            {
                font-size: 1.25em;
            }
        }

        button
        {
            @extend %button;
    
            height: 50px;
            width: 75%;
    
            @media screen and (max-width: 600px)
            {
                font-size: 1.6em;
            }
    
            @media screen and (max-width: 400px)
            {
                font-size: 1.5em;
            }
    
            &:hover
            {
                @extend %button-hover;
            }
        }
    }
}

